# nostr-banhammer

./: .gitignore  Cargo.toml  README.md  bans.yaml
.github/workflows/: release.yml
banhammer/: .env.dist  .gitignore  Cargo.toml
banhammer/fixtures/: bans.json
banhammer/src/: admin.rs  app.rs  hammer.rs  main.rs
banhammer_cli/: Cargo.toml
banhammer_cli/src/: handler.rs  lib.rs  main.rs
banhammer_grpc/: Cargo.toml
banhammer_grpc/proto/: validationcontrol.proto
banhammer_grpc/src/: build.rs  lib.rs  nauthz.rs  validationcontrol.rs
bans/: bans.yaml
