[package]
name = "banhammer_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
serde = "1.0.152"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.17"
tonic = "0.10.0"
tabled = "0.14.0"
secp256k1 = "0.28.0"
bech32 = "0.9.1"

[dependencies.banhammer_grpc]
path = "../banhammer_grpc"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"